src/App.css
::-webkit-scrollbar {
  width: 10px;
}

::-webkit-scrollbar-track {
  background-color: transparent;
}

::-webkit-scrollbar-thumb {
  background-color: #abb2b4;
  border-radius: 20px;
  border: 3px solid transparent;
  -webkit-background-clip: content-box;
  background-clip: content-box;
}

::-webkit-scrollbar-thumb:hover {
  background-color: #9ca195;
}

::-webkit-scrollbar-corner {
  display: none;
}

.App {
  height: 100vh;
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
}

.header {
  color: #fff;
}

.joinChatContainer {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
  border: 2px solid black;
  background-color: #36393f;
  width: 320px;
  height: 450px;
  border-radius: 10px;
}

.joinChatContainer input {
  width: 40%;
  margin-bottom: 5%;
  border: 2px solid #111111;
  border-radius: 5px;
  padding: 1.5%;
  outline: none;
}

.joinChatContainer button {
  width: 30%;
  border: none;
  border-radius: 5px;
  padding: 1.5%;
  background: #111111;
  color: #fff;
  cursor: pointer;
}

.joinChatContainer button:hover {
  background: #2e7d32;
}

.chat-window {
  background-color: #111111;
  width: 320px;
  height: 450px;
  border-radius: 10px;
}

.chat-window p {
  margin: 0;
}

.chat-window .chat-header {
  background: #353434;
  border-radius: 10px 10px 0px 0px;
}

.chat-window .chat-header p {
  display: block;
  margin-left: 5%;
  color: #fff;
  line-height: 45px;
}

.chat-body {
  height: 345px;
  padding: 2%;
}

.chat-window .chat-body .message-container {
  width: 100%;
  height: 100%;
  overflow-y: scroll;
  overflow-x: hidden;
}

.chat-window .chat-body .message-container::-webkit-scrollbar {
  display: none;
}

.chat-window .chat-body .message .message-content {
  width: auto;
  height: auto;
  min-width: 50px;
  max-width: 125px;
  border-radius: 5px;
  color: #fff;
  display: flex;
  align-items: center;
  padding: 5px;
  overflow-wrap: break-word;
  word-break: break-word;
}

#sender {
  display: flex;
  justify-content: flex-end;
}

#sender .message-content {
  background-color: #5746d3;
}

#receiver .message-content {
  background-color: #9b0dbd;
}

#receiver .message-meta,
#sender .message-meta {
  justify-content: flex-start;
  margin-left: 5%;
  margin-bottom: 10%;
  color: #fff;
  opacity: 0.5;
}

#receiver {
  display: flex;
  justify-content: flex-start;
}

.message-meta #author {
  margin-left: 5px;
}

.chat-window .chat-body .message .message-meta {
  display: flex;
  font-size: 12px;
}

.chat-window .chat-footer {
  height: 10%;
  margin-left: 2%;
  margin-right: 2%;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.chat-window .chat-footer input {
  height: 70%;
  width: 78%;
  border: 0;
  padding-left: 5%;
  padding-right: 5%;
  border: 1px solid;
  border-radius: 100px;
  outline: none;
  border-width: 0;
  background-color: #353434;
  color: #fff;
}

/* .chat-window .chat-footer button {
  transition: box-shadow 300ms ease-in-out, color 300ms ease-in-out;
  border-radius: 50%;
  border: none;
}

.chat-window .chat-footer button:hover {
  box-shadow: 0 0 40px 40px red inset;
} */

.icons {
  background: -webkit-linear-gradient(#913fa5, #5348a7);
  -webkit-background-clip: text;
  background-clip: text;
  -webkit-text-fill-color: transparent;
}

.btn {
  position: relative;
  display: block;
  padding: 3%;
  overflow: hidden;
  border-width: 0;
  outline: none;
  border-radius: 50%;
  background-color: #353434;
  color: #ecf0f1;
  transition: background-color 0.3s;
  /* -webkit-filter: invert(100%);
  filter: invert(100%); */
}

.btn:hover,
.btn:focus {
  background-color: #252525;
}

.btn:before {
  content: "";
  position: absolute;
  top: 50%;
  left: 50%;
  display: block;
  width: 0;
  padding-top: 0;
  border-radius: 100%;
  background-color: rgba(236, 240, 241, 0.3);
  -webkit-transform: translate(-50%, -50%);
  -moz-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  -o-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
}

.btn:active:before {
  width: 120%;
  padding-top: 120%;
  transition: width 0.2s ease-out, padding-top 0.2s ease-out;
}

